Fix alignment

--- a/css/accelerate.css
+++ b/css/accelerate.css
@@ -3981,7 +3981,7 @@ footer {
 }
 
 .sprint-location {
-  text-align: right;
+  text-align: left;
   padding-right: 2em;
 }
 
